--- a/ansible/templates/00-mpm.conf.j2
+++ b/ansible/templates/00-mpm.conf.j2
@@ -16,3 +16,15 @@ LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 # See: http://httpd.apache.org/docs/2.4/mod/event.html
 #
 #LoadModule mpm_event_module modules/mod_mpm_event.so
+<IfModule mpm_prefork_module>
+    StartServers {{ httpd.mpm.StartServers }}
+    MinSpareServers {{ httpd.mpm.MinSpareServers }}
+    MaxSpareServers {{ httpd.mpm.MaxSpareServers }}
+    ServerLimit {{ httpd.mpm.ServerLimit }}
+    MaxRequestWorkers {{ httpd.mpm.MaxRequestWorkers }}
+    MaxRequestsPerChild {{ httpd.mpm.MaxRequestsPerChild }}
+</IfModule>
+ 
+KeepAlive {{ httpd.mpm.KeepAlive }}
+MaxKeepAliveRequests {{ httpd.mpm.MaxKeepAliveRequests }}
+KeepAliveTimeout {{ httpd.mpm.KeepAliveTimeout }}
